spacing fixed

--- a/components/Footer.module.css
+++ b/components/Footer.module.css
@@ -7,6 +7,6 @@
   margin-bottom: 20px;
 }
 
-.body p{
+.body span{
   margin-right: 40px;
 }
